<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView
        android:id="@+id/dialog_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/dialog_worker_id"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/textEdit_workersId"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="number"
        android:lines="4"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/dialog_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editText_Name"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:id="@+id/dialog_title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/dialog_worker_surname"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editText_Surname"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:id="@+id/dialog_title4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/dialog_department"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editText_department"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:id="@+id/dialog_title5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/dialog_date_of_birth"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editText_dateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="date"
        android:lines="4"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:id="@+id/dialog_title6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/dialog_date_of_accept"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editText_dateOfAccept"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="date"
        android:lines="4"
        android:textSize="@dimen/input_new_note" />

</LinearLayout>